--- a/Shopping/src/main/resources/application.properties
+++ b/Shopping/src/main/resources/application.properties
@@ -1,9 +1,9 @@
 
-spring.mvc.view.prefix=/WEB-INF/jsp/
-spring.mvc.view.suffix=.jsp
+#spring.mvc.view.prefix=/
+spring.mvc.view.suffix=.html
 
 spring.jpa.hibernate.ddl-auto=update
 #spring.datasource.driver-class-name =com.mysql.jdbc.Driver
-spring.datasource.url=jdbc:mysql://${MYSQL_HOST:localhost}:3306/stockmarket
+spring.datasource.url=jdbc:mysql://${MYSQL_HOST:localhost}:3306/information
 spring.datasource.username=root
-spring.datasource.password=Yadav@81
+spring.datasource.password=root
